# mlirEvolve

./: .gitignore  .gitmodules  README.md  TODO.md  UNDERSTANDING.md  docker-compose.yml
configs/agents/: claude_opus.yaml  codex.yaml  kimi_k2.yaml
configs/frameworks/: manual.yaml  openevolve.yaml  shinkaevolve.yaml
configs/tasks/: llvm_inlining.yaml
cookbook/LLVM_recipes/: example.yaml
data/templates/AEInlineAdvisor/: AEInlineAdvisor.cpp  CMakeLists.txt
docs/: neo4j_setup.md
experiments/debug_info/: compile_and_print.sh  input.mlir
experiments/iree_artifacts/: compile_and_organize.sh  compile_test.sh  example_onnx_fc.py  example_onnx_model.py  test.mlir
experiments/lit_command/: input.mlir  opt_and_check.sh
experiments/run_20260217_180534/: ctmark_results.json  scores.jsonl
experiments/run_20260217_180534/openevolve_output/best/: best_program.cpp  best_program_info.json
src/mlirAgent/: config.py  mcp_server.py
src/mlirAgent/evolve/: README.md  __init__.py  adapters.py  config.yaml  evaluator.py  manual_run.py  providers.py  run.py
src/mlirAgent/mining/: enrich_metadata.py  extract_test_prompt.py  mine_commits.py
src/mlirAgent/rlm/: analysis.py
src/mlirAgent/scip/: check_graph_status.py  ingest_codegraph.py
src/mlirAgent/tools/: build.py  compiler.py  evaluator.py  provenance.py  trace_provenance.py  verifier.py
tests/: manual_compiler_tool_config.py  test_build_tool.py  test_folder_structure_passes.py  test_mlir_bindings.py  test_provenance.py  test_scip_structure.py  test_tool_verifier.py
tools/: trace_provenance.py
(+21 files in other folders)
